@@ -651,32 +651,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|tempInput
-operator|!=
-literal|null
-condition|)
-block|{
-name|tempInput
-operator|.
-name|delete
-argument_list|()
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|tempSorted
-operator|!=
-literal|null
-condition|)
-block|{
-name|tempSorted
-operator|.
-name|delete
-argument_list|()
-expr_stmt|;
-block|}
 name|IOUtils
 operator|.
 name|close
@@ -684,6 +658,32 @@ argument_list|(
 name|reader
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|tempInput
+operator|!=
+literal|null
+condition|)
+block|{
+name|tempInput
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|tempSorted
+operator|!=
+literal|null
+condition|)
+block|{
+name|tempSorted
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 DECL|class|BytesOnlyComparator
 specifier|private
