@@ -478,6 +478,11 @@ name|reader
 init|=
 literal|null
 decl_stmt|;
+name|ExternalRefSorter
+name|sorter
+init|=
+literal|null
+decl_stmt|;
 comment|// Push floats up front before sequences to sort them. For now, assume they are non-negative.
 comment|// If negative floats are allowed some trickery needs to be done to find their byte order.
 name|boolean
@@ -638,6 +643,8 @@ name|FSTCompletionBuilder
 argument_list|(
 name|buckets
 argument_list|,
+name|sorter
+operator|=
 operator|new
 name|ExternalRefSorter
 argument_list|(
@@ -862,6 +869,8 @@ argument_list|(
 name|reader
 argument_list|,
 name|writer
+argument_list|,
+name|sorter
 argument_list|)
 expr_stmt|;
 else|else
@@ -872,6 +881,8 @@ argument_list|(
 name|reader
 argument_list|,
 name|writer
+argument_list|,
+name|sorter
 argument_list|)
 expr_stmt|;
 name|tempInput
