@@ -84,8 +84,9 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|check
-argument_list|(
+name|ExternalRefSorter
+name|s
+init|=
 operator|new
 name|ExternalRefSorter
 argument_list|(
@@ -93,7 +94,16 @@ operator|new
 name|Sort
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|check
+argument_list|(
+name|s
 argument_list|)
+expr_stmt|;
+name|s
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 block|}
 annotation|@
