@@ -246,6 +246,11 @@ argument_list|(
 name|fstFile
 argument_list|)
 expr_stmt|;
+name|sorter
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
